--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -73,9 +73,8 @@ jobs:
       shell : bash
 
     - name: Set Override Parameters
-      run: echo "OVERRIDE_PARAMS={\"testId\":\"${{ steps.guid.outputs.GUID }}\"}" >> $GITHUB_ENV
-
-
+      run: echo "OVERRIDE_PARAMS_${{ matrix.os }}_${{ matrix.configFile }}={\"testId\":\"${{ steps.guid.outputs.GUID }}\"}" >> $GITHUB_ENV
+  
     - name: 'Azure Load Testing'
       uses: ./
       id: alt
@@ -83,12 +82,12 @@ jobs:
         loadTestConfigFile: ${{ matrix.configFile }}
         loadTestResource: ${{ env.LOAD_TEST_RESOURCE }}
         resourceGroup: ${{ env.LOAD_TEST_RESOURCE_GROUP }}
-        overRideParameters: ${{ env.OVERRIDE_PARAMS  }}
+        overRideParameters: ${{ env[format('OVERRIDE_PARAMS_{0}_{1}', matrix.os, matrix.configFile)] }}
         outputVariableName: 'loadTestRunId'
       continue-on-error: true
 
     - name: Print the Output
-      run: echo "The Test ID is ${{ steps.alt.outputs.loadTestRunId.testRunId }}"
+      run: echo "The Test ID is ${{ steps.alt.outputs['loadTestRunId.testRunId'] }}"
 
     - name: Check for results and report files
       run: |
