--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -36,10 +36,9 @@ jobs:
     name: Validate PR
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
         configFile: ['sample-test-url.yaml', 'sample-test-jmx.yaml', 'sample-test-locust.yaml']
         
-    runs-on: ${{ matrix.os }}
+    runs-on: $(shuf -n1 -e ubuntu-latest windows-latest)
     steps:
     - name: Checkout
       uses: actions/checkout@v2
