--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -22,9 +22,9 @@ on:
 #
 # 2. Change these variables for your configuration:
 
-env:
-  LOAD_TEST_RESOURCE: ${{ secrets.LOAD_TEST_RESOURCE_NAME }}
-  LOAD_TEST_RESOURCE_GROUP: ${{ secrets.LOAD_TEST_RESOURCE_GROUP_NAME }}
+# env:
+#   LOAD_TEST_RESOURCE: ${{ secrets.LOAD_TEST_RESOURCE_NAME }}
+#   LOAD_TEST_RESOURCE_GROUP: ${{ secrets.LOAD_TEST_RESOURCE_GROUP_NAME }}
 
 permissions:
   id-token: write # This is required for requesting the JWT
@@ -36,66 +36,12 @@ jobs:
     name: Validate PR
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest]
         configFile: ['sample-test-url.yaml', 'sample-test-jmx.yaml', 'sample-test-locust.yaml']
         
-    runs-on: $(shuf -n1 -e ubuntu-latest windows-latest)
+    runs-on: ${{ matrix.os }}
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20'
-
-    - name: Installing dependencies and building latest changes
-      run: |
-        npm install --include=dev -f
-        npm ci
-
-    - name: Azure authentication
-      uses: azure/login@v1
-      continue-on-error: false
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-    - name: Generate GUID
-      id: guid
-      run: |
-          if [[ "${{ runner.os }}" == "Windows" ]]; then
-            echo "::set-output name=GUID::$(powershell -Command "[guid]::NewGuid().ToString()")"
-          else
-            echo "::set-output name=GUID::$(uuidgen)"
-          fi
-      shell : bash
-  
-    - name: 'Azure Load Testing'
-      uses: ./
-      id: alt
-      with:
-        loadTestConfigFile: ${{ matrix.configFile }}
-        loadTestResource: ${{ env.LOAD_TEST_RESOURCE }}
-        resourceGroup: ${{ env.LOAD_TEST_RESOURCE_GROUP }}
-        overRideParameters: "{\"testId\":\"${{ steps.guid.outputs.GUID }}\"}"
-        outputVariableName: 'loadTestRunId'
-      continue-on-error: true
-
-    - name: Print the Output
-      run: echo "The Test ID is ${{ steps.alt.outputs['loadTestRunId.testRunId'] }}"
-
-    - name: Check for results and report files
-      run: |
-        if [[ -d "./loadTest" ]]; then
-          if [[ -f "./loadTest/results.zip" && -f "./loadTest/report.zip" ]]; then
-            echo "Both results.zip and report.zip files are present."
-          else
-            echo "One or both of the files are missing."
-            exit 1
-          fi
-        else
-          echo "loadTest directory is missing."
-          exit 1
-        fi
-      shell: bash
+      - name: run basic e2e
+        uses: ./../setup-template
+        with:
+          configFile: ${{ matrix.configFile }}
