--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -41,6 +41,9 @@ jobs:
         
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+        
       - name: run basic e2e
         uses: ./../setup-template
         with:
