--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -48,3 +48,8 @@ jobs:
         uses: ./.github/actions/setup-template
         with:
           configFile: ${{ matrix.configFile }}
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          resourceGroup: ${{ secrets.LOAD_TEST_RESOURCE_GROUP_NAME }}
+          resourceName: ${{ secrets.LOAD_TEST_RESOURCE_NAME }}
+          clientId: ${{ secrets.AZURE_CLIENT_ID }}
+          tenantId: ${{ secrets.AZURE_TENANT_ID }}
