folderizing the GH test files.

--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -98,7 +98,7 @@ jobs:
         uses: ./
         id: alt
         with:
-          loadTestConfigFile: ${{ matrix.configFile }}
+          loadTestConfigFile: ./TestFiles/${{ matrix.configFile }}
           loadTestResource: ${{ env.LOAD_TEST_RESOURCE }}
           resourceGroup: ${{ env.LOAD_TEST_RESOURCE_GROUP }}
           overRideParameters: "{\"testId\":\"${{ steps.guid.outputs.GUID }}\"}"
