--- a/TestFiles/sample-test-jmx.yaml
+++ b/TestFiles/sample-test-jmx.yaml
@@ -1,6 +1,6 @@
 version: v0.1
 testName: testId
-testPlan: SampleApp.jmx
+testPlan: ./../ConfigFiles/SampleApp.jmx
 testType: JMX
 description: 'E2E for the build pipeline (JMX)'
 env:
