--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -25,78 +25,102 @@ on:
 env:
   LOAD_TEST_RESOURCE: ${{ secrets.LOAD_TEST_RESOURCE_NAME }}
   LOAD_TEST_RESOURCE_GROUP: ${{ secrets.LOAD_TEST_RESOURCE_GROUP_NAME }}
+  CONFIG_FILES: '["basic-test-url.yaml", "basic-test-jmx.yaml", "basic-test-locust.yaml", "app-components-test.yaml"]'
 
 permissions:
   id-token: write # This is required for requesting the JWT
   contents : read # This is required for actions/checkout
 
 jobs:
+  generate-matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: Generate Dynamic Matrix
+        id: set-matrix
+        run: |
+          os_options=('ubuntu-latest' 'windows-latest')
+          configs=$(echo '${{ env.CONFIG_FILES }}' | jq -r '.[]')
+          matrix_json="{\"include\":["
+
+          for config in $configs; do
+            rand_os=${os_options[$((RANDOM % 2))]}  # Random OS for each test
+            matrix_json+="{\"configFile\":\"$config\",\"os\":\"$rand_os\"},"
+          done
+
+          matrix_json="${matrix_json::-1}]}"  # Remove trailing comma
+          
+          echo "Generated Matrix: $matrix_json"
+          echo "::set-output name=matrix::$matrix_json"  # Set matrix output
+
   run-integration-test:
     environment: automation test
     name: Validate PR
+    needs: generate-matrix
     strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        configFile: ['sample-test-url.yaml', 'sample-test-jmx.yaml', 'sample-test-locust.yaml']
-        
+      matrix: ${{ fromJson(needs.generate-matrix.outputs.matrix) }}
     runs-on: ${{ matrix.os }}
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20'
-
-    - name: Installing dependencies and building latest changes
-      run: |
-        npm install --include=dev -f
-        npm ci
-
-    - name: Azure authentication
-      uses: azure/login@v1
-      continue-on-error: false
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-    - name: Generate GUID
-      id: guid
-      run: |
-          if [[ "${{ runner.os }}" == "Windows" ]]; then
-            echo "::set-output name=GUID::$(powershell -Command "[guid]::NewGuid().ToString()")"
-          else
-            echo "::set-output name=GUID::$(uuidgen)"
-          fi
-      shell : bash
+      - name: Checkout
+        uses: actions/checkout@v2
   
-    - name: 'Azure Load Testing'
-      uses: ./
-      id: alt
-      with:
-        loadTestConfigFile: ${{ matrix.configFile }}
-        loadTestResource: ${{ env.LOAD_TEST_RESOURCE }}
-        resourceGroup: ${{ env.LOAD_TEST_RESOURCE_GROUP }}
-        overRideParameters: "{\"testId\":\"${{ steps.guid.outputs.GUID }}\"}"
-        outputVariableName: 'loadTestRunId'
-      continue-on-error: true
-
-    - name: Print the Output
-      run: echo "The Test ID is ${{ steps.alt.outputs['loadTestRunId.testRunId'] }}"
-
-    - name: Check for results and report files
-      run: |
-        if [[ -d "./loadTest" ]]; then
-          if [[ -f "./loadTest/results.zip" && -f "./loadTest/report.zip" ]]; then
-            echo "Both results.zip and report.zip files are present."
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
+  
+      - name: Installing dependencies and building latest changes
+        run: |
+          npm install --include=dev -f
+          npm ci
+        shell: bash
+  
+      - name: Azure authentication
+        uses: azure/login@v1
+        continue-on-error: false
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  
+      - name: Generate GUID
+        id: guid
+        run: |
+            if [[ "${{ runner.os }}" == "Windows" ]]; then
+              echo "::set-output name=GUID::$(powershell -Command "[guid]::NewGuid().ToString()")"
+            else
+              echo "::set-output name=GUID::$(uuidgen)"
+            fi
+        shell : bash
+    
+      - name: 'Azure Load Testing'
+        uses: ./
+        id: alt
+        with:
+          loadTestConfigFile: ./TestFiles/${{ matrix.configFile }}
+          loadTestResource: ${{ env.LOAD_TEST_RESOURCE }}
+          resourceGroup: ${{ env.LOAD_TEST_RESOURCE_GROUP }}
+          overRideParameters: "{\"testId\":\"${{ steps.guid.outputs.GUID }}\"}"
+          outputVariableName: 'loadTestRunId'
+        continue-on-error: true
+  
+      - name: Print the Output
+        run: echo "The Test ID is ${{ steps.alt.outputs['loadTestRunId.testRunId'] }}"
+        shell: bash
+  
+      - name: Check for results and report files
+        run: |
+          if [[ -d "./loadTest" ]]; then
+            if [[ -f "./loadTest/results.zip" && -f "./loadTest/report.zip" ]]; then
+              echo "Both results.zip and report.zip files are present."
+            else
+              echo "One or both of the files are missing."
+              exit 1
+            fi
           else
-            echo "One or both of the files are missing."
+            echo "loadTest directory is missing."
             exit 1
           fi
-        else
-          echo "loadTest directory is missing."
-          exit 1
-        fi
-      shell: bash
+        shell: bash
+        
