--- a/TestFiles/basic-test-url.yaml
+++ b/TestFiles/basic-test-url.yaml
@@ -1,5 +1,5 @@
 version: v0.1
 testName: testId
-testPlan: sample-test.json
+testPlan: ./../ConfigFiles/BasicURLTest.json
 testType: URL
 description: 'E2E for the build pipeline (URL)'
