Add more tests and move to config file

--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -26,6 +26,7 @@ env:
   LOAD_TEST_RESOURCE: ${{ secrets.LOAD_TEST_RESOURCE_NAME }}
   LOAD_TEST_RESOURCE_GROUP: ${{ secrets.LOAD_TEST_RESOURCE_GROUP_NAME }}
   CONFIG_FILES: '["basic-test-url.yaml", "basic-test-jmx.yaml", "basic-test-locust.yaml", "app-components-test.yaml"]'
+  E2E_TEST_CONFIG_FILE_PATH: '../config/e2eTestConfig.json'
 
 permissions:
   id-token: write # This is required for requesting the JWT
@@ -41,12 +42,14 @@ jobs:
         id: set-matrix
         run: |
           os_options=('ubuntu-latest' 'windows-latest')
-          configs=$(echo '${{ env.CONFIG_FILES }}' | jq -r '.[]')
+          # configs=$(echo '${{ env.CONFIG_FILES }}' | jq -r '.[]')
+          configs=$(jq '.[]' '${{ env.E2E_TEST_CONFIG_FILE_PATH }}')
           matrix_json="{\"include\":["
 
           for config in $configs; do
             rand_os=${os_options[$((RANDOM % 2))]}  # Random OS for each test
-            matrix_json+="{\"configFile\":\"$config\",\"os\":\"$rand_os\"},"
+            configFile=$(echo '$config' | jq -r '.configFile')
+            matrix_json+="{\"configFile\":\"$configFile\",\"os\":\"$rand_os\"},"
           done
 
           matrix_json="${matrix_json::-1}]}"  # Remove trailing comma
