--- a/ConfigFiles/basic-test-url.yaml
+++ b/ConfigFiles/basic-test-url.yaml
@@ -1,5 +1,5 @@
 version: v0.1
-testName: testId
+testName: basictesturl
 testPlan: ../TestFiles/BasicURLTest.json
 testType: URL
 description: 'E2E for the build pipeline (URL)'
