--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -42,7 +42,10 @@ jobs:
         id: set-matrix
         run: |
           os_options=('ubuntu-latest' 'windows-latest')
-          # configs=$(echo '${{ env.CONFIG_FILES }}' | jq -r '.[]')
+
+          ScriptsRoot="$( cd "$( dirname "${BASH_SOURCE[0]}" )"  && pwd )"
+          E2ETestConfigFile="$ScriptsRoot/../config/e2eTestConfig.json"
+          # configs=$(echo '${E2ETestConfigFile}' | jq -r '.[]')
           configs=$(jq '.[]' '${{ env.E2E_TEST_CONFIG_FILE_PATH }}')
           matrix_json="{\"include\":["
 
