--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -44,9 +44,9 @@ jobs:
           os_options=('ubuntu-latest' 'windows-latest')
 
           ScriptsRoot="$( cd "$( dirname "${BASH_SOURCE[0]}" )"  && pwd )"
-          E2ETestConfigFile="$ScriptsRoot/e2eTestConfig.json"
-          # configs=$(echo '${E2ETestConfigFile}' | jq -r '.[]')
-          configs=$(jq '.[]' '${{ env.E2E_TEST_CONFIG_FILE_PATH }}')
+          E2ETestConfigFile="$ScriptsRoot/../config/e2eTestConfig.json"
+          # configs=$(echo '${{ env.CONFIG_FILES }}' | jq -r '.[]')
+          configs=$(jq '.[]' '${E2ETestConfigFile}')
           matrix_json="{\"include\":["
 
           for config in $configs; do
