--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -61,7 +61,7 @@ jobs:
           ls -l
 
           ScriptsRoot="$( cd "$( dirname "${BASH_SOURCE[0]}" )"  && pwd )"
-          E2ETestConfigFile="./.github/workflows/config/e2eTestConfig.json"
+          E2ETestConfigFile="./e2eTestConfig.json"
           # configs=$(echo '${{ env.CONFIG_FILES }}' | jq -r '.[]')
           configs=$(jq '.[]' "${E2ETestConfigFile}")
           matrix_json="{\"include\":["
