--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -46,22 +46,8 @@ jobs:
         run: |
           os_options=('ubuntu-latest' 'windows-latest')
 
-          ls -l
-
-          echo "cd .github"
-          cd .github
-          ls -l
-          
-          echo "cd workflows"
-          cd workflows
-          ls -l
-
-          echo "cd config"
-          cd config
-          ls -l
-
           ScriptsRoot="$( cd "$( dirname "${BASH_SOURCE[0]}" )"  && pwd )"
-          E2ETestConfigFile="./e2eTestConfig.json"
+          E2ETestConfigFile="./.github/workflows/config/e2eTestConfig.json"
           # configs=$(echo '${{ env.CONFIG_FILES }}' | jq -r '.[]')
           configs=$(jq '.[]' "${E2ETestConfigFile}")
           matrix_json="{\"include\":["
