--- a/ConfigFiles/app-components-test.yaml
+++ b/ConfigFiles/app-components-test.yaml
@@ -4,9 +4,7 @@ displayName: E2E test for app components
 testPlan: ../TestFiles/BasicTest.jmx
 testType: JMX
 description: 'E2E for the build pipeline (JMX)'
-autoStop:
-  errorPercentage: 10
-  timeWindow: 20
+autoStop: disable
 appComponents:
 - resourceId: "/subscriptions/7c71b563-0dc0-4bc0-bcf6-06f8f0516c7a/resourceGroups/cnt-integration-tests-rg/providers/Microsoft.Web/serverfarms/cnt-integration-tests-server"
   kind: app # Optional
